head(se agrego funcionalidad para conectar bd mysql y dapper)

--- a/WebAPiGamachicas.com/WebAPiGamachicas.com.csproj
+++ b/WebAPiGamachicas.com/WebAPiGamachicas.com.csproj
@@ -9,16 +9,16 @@
   <ItemGroup>
     <Folder Include="log\" />
     <Folder Include="model\" />
-    <Folder Include="Utils\" />
-    <Folder Include="resources\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="1.50.7" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.2105168" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="MySql.Data" Version="8.0.15" />
   </ItemGroup>
 
 </Project>
