--- a/WebAPiGamachicas.com/appsettings.json
+++ b/WebAPiGamachicas.com/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Configuration": {
+        "DefaultConnection": "server=localhost;user id=root;password=123456;port=3306;database=gamachicas;"
     }
-  },
-  "AllowedHosts": "*"
 }
